package IM;

message ClientToChatServer
{
	required int32 timestamp = 1; //时间戳
	required string token = 2; //token
	required int32 type = 3; //信息种类,1:私聊,2:群聊
	required int32 toId = 4; //type=1:用户ID,type=2:群组ID
	required string content = 5; //信息内容
	optional string signal = 6; //预留为以后签名用
}

message ChatServerToClient
{
	required int32 timestamp = 1; //时间戳,type=6:信息时间戳
	required int32 type = 2; //信息种类,1:私聊,2:群聊,3:加好友通知,4:加群组通知,5:踢出群组通知,6:消息回执
	required int32 fromId = 3; //type=1:用户ID,type=2:群组ID,type=3:用户ID,type=4:群组ID,type=5:群组ID,type=6:0
	required string content = 4; //信息内容,type=6:{1:成功,2:失败}
}

message ChatServerToCtrlServer
{
	required int32 timestamp = 1; //时间戳
	required int32 type = 2; //信息种类,1:私聊,2:群聊,3:加好友通知,4:加群组通知,5:踢出群组通知
	required string fromId = 3; //type=1:用户ID,type=2:群组ID,type=3:用户ID,type=4:群组ID,type=5:群组ID
	required string toId = 4; //用户ID
	required string content = 5; //信息内容
}

message CtrlServerToChatServer
{
	required int32 timestamp = 1; //时间戳
	required int32 type = 2; //信息种类,1:私聊,2:群聊,3:加好友通知,4:加群组通知,5:踢出群组通知
	required string fromId = 3; //type=1:用户ID,type=2:群组ID,type=3:用户ID,type=4:群组ID,type=5:群组ID
	required string toId = 4; //用户ID
	required string content = 5; //信息内容
}